correct z-index issue which was breaking links on Contacts component

--- a/src/scss/components/_introduction.scss
+++ b/src/scss/components/_introduction.scss
@@ -6,7 +6,7 @@
     align-items: center;
     min-height: 200px;
     justify-content: space-around;
-    z-index: -10;
+    z-index: 10;
     padding: $pa3 $pa3 0 $pa3;
     img {
         margin: 0;
